--- a/vim-shortcuts.ipynb
+++ b/vim-shortcuts.ipynb
@@ -27,8 +27,10 @@
     "- `!` invokes the terminal, anything after the ! is executed as a terminal command\n",
     "- `:` is to execute command in normal mode\n",
     "- `i` insert mode, inserting before the cursor\n",
+    "- `I` insert at the start of the current line\n",
     "- `shift + i` enter insert mode at the begining of the line\n",
     "- `a` for inserting after cursor\n",
+    "- `A` Append to the end of current line\n",
     "- `shift + a` enter insert mode at the end of the line\n",
     "- `d` delete mode\n",
     "- `w` write\n",
@@ -57,7 +59,7 @@
     "- `4j` = 4$\\downarrow$\n",
     "- `4h` = 4$\\uparrow$\n",
     "- `4l` = 4$\\rightarrow$\n",
-    "- `w` jump to the next word\n",
+    "- `w` jump to the beggining of the next word\n",
     "- `e` jumps to the end of a word\n",
     "- `b` jumb backward a word\n",
     "- `0` jumps to beginning of a line\n",
@@ -66,11 +68,13 @@
     "- `2dw` deletes 2cwords\n",
     "- `db` deletes a word backward\n",
     "- `diw` delete in a word\n",
+    "- `c` change (delete and enter insert mode)\n",
     "- `ciw` change in a word\n",
     "- `ci\"` change inside quotation mark\n",
     "- `di\"` delete inside quotation mark\n",
     "- `d0` deletes everything from the cursor to the begining of the line\n",
     "- `d$` deletes everything from the cursor to the end of the line\n",
+    "- `.` repeat last vim command\n",
     "\n",
     "- `: set relativenumber` relative number line\n",
     "- `: set mouse=a` to be able to use mouse\n",
@@ -123,7 +127,7 @@
    "id": "274988ab-d21c-4ee6-a0f0-e5495a05f365",
    "metadata": {},
    "source": [
-    "- `v` for visual mode\n",
+    "- `v` enter into visual mode\n",
     "- `y` is key for yanking, yanking means copy\n",
     "- `yy` yank the whole line\n",
     "- `cc` enters insert mode but doesn't delete the full line\n",
@@ -140,14 +144,13 @@
    "metadata": {},
    "source": [
     "- `%` jump to closing bracket\n",
-    "- `t<symbol>` get the the position before the specified symbol\n",
-    "- `dt<symbol>` deletes everything before the specified symbol\n",
-    "- `f<symbol>` jump to the position of the specified symbol\n",
-    "- `F<symbol>` jumps to to the position of the previous occurance of the specified symbol\n",
     "\n",
     "- `gg` jumps to the begining of the file\n",
     "- `G` jumps to the end of the file\n",
     "- `<linenumber>G` jumps to the specific line number\n",
+    "- `0` go the start of the line\n",
+    "- `$` go to end of the line\n",
+    "- `^` or `0w` go to the first non-whitespace character of the line\n",
     "\n",
     "- `>>` indentation, shift line to right\n",
     "- `<<` shift line to the left\n",
@@ -171,11 +174,70 @@
    "source": [
     "vim register helps you deal with clipboard\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13407243-0d63-46ad-b465-9c0a99773f2f",
+   "metadata": {},
+   "source": [
+    "- `ctrl + u` scroll up\n",
+    "- `ctrl + d` scroll down\n",
+    "- `{` move to next paragraph/code block\n",
+    "- `}` move to previous paragraph/code block\n",
+    "- `H` move to the highest point in the viewport\n",
+    "- `M` move to the middle of the viewport\n",
+    "- `L` move to the lowest point  in the viewport"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "867803e3-ff9f-4db5-a364-4f90db5ca22f",
+   "metadata": {},
+   "source": [
+    "# Searching\n",
+    "- `t<symbol>` get the the position before the specified symbol\n",
+    "- `dt<symbol>` deletes everything before the specified symbol\n",
+    "- `f<symbol>` jump to the position of the specified symbol\n",
+    "- `F<symbol>` jumps to to the position of the previous occurance of the specified symbol\n",
+    "- `/<searchterm>` start looking for your search term, pressing enter will take you to the first occurence of the search term\n",
+    "- `?<searchterm>` start looking backwards for your search term\n",
+    "- `n` jump to the next occurrence\n",
+    "- `N` jump to the previous occurrence\n",
+    "- `:noh` turn off search highlighting until next search"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d35429c3-89c6-4cd9-9199-68ee79bbce43",
+   "metadata": {},
+   "source": [
+    "## Noun Objects\n",
+    "### text obejects \n",
+    "text objects allows you to operate anywhere within a defined body of text\n",
+    "- `iw` inner word (works from anywhere in a word)\n",
+    "- `it` inner tag (the contents of an HTML tag)\n",
+    "- `i\"` inner quotes\n",
+    "- `ip` inner paragraph\n",
+    "- `as` a sentense\n",
+    "\n",
+    "### parameterized text objects\n",
+    "- `f`, `F` find the next character\n",
+    "- `t`, `T` find the next character\n",
+    "- `/` Search (up to the next match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a932fdc3-290d-4df2-aaf0-40089c4968ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -189,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
