--- a/vim.ipynb
+++ b/vim.ipynb
@@ -2,61 +2,223 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6b30e978-6df3-4355-bdc2-1d477ebb43d5",
+   "id": "6d9961a3-1e85-4060-92b8-81db00c81f86",
    "metadata": {},
    "source": [
-    "Installing vim \n",
+    "# Struct of Editing Commmand\n",
+    "`<number><command><text object or motion>`\n",
     "\n",
-    "on linux\n",
+    "## Number\n",
+    "number is used to perform command over multiple text objects or motions\n",
     "\n",
-    "`sudo apt install neovim`\n",
+    "## Vim Verbs/Command\n",
+    "an operation\n",
     "\n",
-    "on mac"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab8f5a8c-47d1-4a59-af8f-62f6a5643561",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! brew install neovim"
+    "falls into 2 category\n",
+    "- actions that acts on a single character\n",
+    "- actions that acts on a \"motion\" or text object\n",
+    "\n",
+    "### Single character verbs\n",
+    "they act as shortcuts for actions that you can also perform motions\n",
+    "- `x` delete character under te cursor\n",
+    "- `r` replace charactrer under cursor with another character\n",
+    "- `s` delete character under cursor and move to insert mode\n",
+    "\n",
+    "### Motion/Text object character verbs\n",
+    "- `d` delete text specified by motion\n",
+    "- `c` delete text specified by motion and go into insert mode\n",
+    "- `y` yank(copy) text specified by motion\n",
+    "there are more \n",
+    "\n",
+    "### Motions\n",
+    "Motions are the motion commands that you can use anytime to move around Vim, some of the examples\n",
+    "- `$` go to the end of the line\n",
+    "- `G` go to end of the file\n",
+    "- `f` go to the next occurence of `.` on the current line\n",
+    "\n",
+    "### Text objects\n",
+    "text objects as a defined chunk of text\n",
+    "\n",
+    "## Combining motions with verbs\n",
+    "- `d$` delete to the end of the line\n",
+    "- `cs)` change through the next closing parentheses\n",
+    "- `yG` copy everything through the end of the file\n",
+    "\n",
+    "- `iw` applies to everything in the current word\n",
+    "- `ciw` change contents of a word\n",
+    "- `it` applies to everything in current xml/html tag\n",
+    "- `yit` copy contents of an html tag\n",
+    "- `i{` applies everything inside nearest curly braces\n",
+    "- `aw` applies to a word (includes surrounding white spaces)\n",
+    "- `daw` delete a word and surrounding white spaces\n",
+    "\n",
+    "the difference between `dw`, `diw` and `daw` is that for the delete to work `dw` the cursor must be at the start of the word, while `daw` the cursor can by at any position in the word and surrounding white space, while `diw` the cursor must be in any position in the word\n",
+    "\n",
+    "\n",
+    "- `yy` yanks current line\n",
+    "- `dd` deletes current line\n",
+    "- `cc` changes current line"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7b4097e9-5770-4b7b-a7f5-cea40e65cb09",
+   "id": "f29f7397-f482-4016-a397-f5b0b93d998c",
    "metadata": {},
    "source": [
-    "https://github.com/junegunn/vim-plug"
+    "## Sentences\n",
+    "- `as` a sentence\n",
+    "- `is` in sentence\n",
+    "- `cis` change a sentence\n",
+    "\n",
+    "## Paragraphs\n",
+    "- `ap` a paragraph\n",
+    "- `dap` delete a paragraph\n",
+    "- `ip` in paragraph"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "4810cff1-a3ea-4338-aa1d-36753a7a1073",
+   "cell_type": "markdown",
+   "id": "762364d0-9dde-4942-ae1d-7448d96f1eee",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 83127  100 83127    0     0   238k      0 --:--:-- --:--:-- --:--:--  238k\n"
-     ]
-    }
-   ],
    "source": [
-    "! sh -c 'curl -fLo \"${XDG_DATA_HOME:-$HOME/.local/share}\"/nvim/site/autoload/plug.vim --create-dirs \\\n",
-    "       https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'"
+    "# Programming Language Text Objects\n",
+    "\n",
+    "## Strings\n",
+    "- `a\"` a double quoted string\n",
+    "- `i\"` in double quoted string\n",
+    "- `a'` a single quoted string\n",
+    "- `i'` in single quoted string\n",
+    "- ``` a` ``` a back quoted string\n",
+    "- ``` i` ``` in back quoted string\n",
+    "\n",
+    "eg.\n",
+    "\n",
+    "```\n",
+    "puts 'Hello \"World\"'\n",
+    "```\n",
+    "`ci\"`\n",
+    "```\n",
+    "puts 'Hello \"\"'\n",
+    "```\n",
+    "\n",
+    "## Parentheses\n",
+    "- `a)` a parenthesized blok\n",
+    "- `i)` inner parenthesized block\n",
+    "\n",
+    "eg.\n",
+    "```\n",
+    "Project.all(:conditions => { :published => true })\n",
+    "```\n",
+    "`da)`\n",
+    "```\n",
+    "Project.all\n",
+    "```\n",
+    "\n",
+    "## Brackets\n",
+    "- `a]` a bracketed block\n",
+    "- `i]` in bracketed block\n",
+    "\n",
+    "eg.\n",
+    "```\n",
+    "(defn sum [x y]\n",
+    "  (+ x y))\n",
+    "```\n",
+    "`da)`\n",
+    "```\n",
+    "(defn sum []\n",
+    "  (+ x y))\n",
+    "```\n",
+    "\n",
+    "## Brackes\n",
+    "- `a}` a brace block\n",
+    "- `i}` in brace block\n",
+    "\n",
+    "eg.\n",
+    "```\n",
+    "puts \"Name: #{user.name}\"\n",
+    "```\n",
+    "`ci}`\n",
+    "```\n",
+    "puts \"Name: #{}\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bbc884a-de55-474a-ab63-1a37713ee822",
+   "metadata": {},
+   "source": [
+    "# Markup Language Tags\n",
+    "- `at` a tag block\n",
+    "- `it` inner tag block\n",
+    "```\n",
+    "<h2>Sample Title</h2>\n",
+    "```\n",
+    "`cit`\n",
+    "```\n",
+    "<h2></h2>\n",
+    "```\n",
+    "\n",
+    "- `a>` a single tag\n",
+    "- `i>` inner single tag\n",
+    "```\n",
+    "<div id=\"content\"></div>\n",
+    "```\n",
+    "`di>`\n",
+    "```\n",
+    "<></div>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "befe2728-3c7d-4152-a537-6bf09a3beabe",
+   "metadata": {},
+   "source": [
+    "# Visual Mode\n",
+    "visual mode is a smell\n",
+    "- Don't use two sentence where one is due\n",
+    "- breaks repeatability\n",
+    "\n",
+    "\n",
+    "multiple cursors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca07224f-0403-4986-b80c-d924560cbf7e",
+   "metadata": {},
+   "source": [
+    "# Registers\n",
+    "Register is a handful of clipboard buffers at your fingertips.\n",
+    "\n",
+    "you can access they clipboard, see all the registers and their contents by entering `:reg`\n",
+    "\n",
+    "Registers are referred to by entering a double-quote followed by the name of a register. \n",
+    "\n",
+    "Register `\"\"` is the default register. Nearly any operation can be used to fill a retister. When we use the `p` command, it draws from this register.\n",
+    "\n",
+    "- `\"<register name><operation>\"` will perform a operation to a register with name which you defined\n",
+    "\n",
+    "eg,\n",
+    "- `\"iyy` copy content of current line to register i\n",
+    "- `\"jyy` copy content of current line to register j\n",
+    "- `\"ip` will paste content in register i\n",
+    "- `\"jp` will paste content to register j\n",
+    "\n",
+    "Registers 1-9 keep track of your last nine operations. They operate like a stack, in that order chunks of text are pushed further down the list until they fall off at the ned after .\n",
+    "\n",
+    "Register 0 is the default yank register. Whenever you type `yy` to copy a line of text and it goes to register 0 and register `\"`\n",
+    "\n",
+    "\n",
+    "Accessing registers in insert mode\n",
+    "- `ctrl + r<register name>` will paste content in register in insert mode  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee342ca2-6b9a-41be-9d1e-e48790fc7d40",
+   "id": "690261bf-12f7-4c8b-b57c-90a5d8435d99",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -64,7 +226,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -78,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
