--- a/vim.ipynb
+++ b/vim.ipynb
@@ -196,7 +196,7 @@
     "\n",
     "Registers are referred to by entering a double-quote followed by the name of a register. \n",
     "\n",
-    "Register `\"\"` is the default register. Nearly any operation can be used to fill a retister. When we use the `p` command, it draws from this register.\n",
+    "Register `\"` is the default register. Nearly any operation can be used to fill a retister. When we use the `p` command, it draws from this register.\n",
     "\n",
     "- `\"<register name><operation>\"` will perform a operation to a register with name which you defined\n",
     "\n",
@@ -206,13 +206,22 @@
     "- `\"ip` will paste content in register i\n",
     "- `\"jp` will paste content to register j\n",
     "\n",
-    "Registers 1-9 keep track of your last nine operations. They operate like a stack, in that order chunks of text are pushed further down the list until they fall off at the ned after .\n",
+    "Registers 1-9 keep track of your last nine operations. They operate like a stack, in that order chunks of text are pushed further down the list until they fall off at the ned after.\n",
+    "\n",
+    "Registers that we can yank into are a-z\n",
     "\n",
     "Register 0 is the default yank register. Whenever you type `yy` to copy a line of text and it goes to register 0 and register `\"`\n",
     "\n",
     "\n",
     "Accessing registers in insert mode\n",
-    "- `ctrl + r<register name>` will paste content in register in insert mode  "
+    "- `ctrl + r<register name>` will paste content in register in insert mode  \n",
+    "\n",
+    "### Special registers\n",
+    "- `:` register for the last command that we typed\n",
+    "- `.` register for the last command \n",
+    "- `%` register for the document name and path that we are in \n",
+    "- `/` register for path directory\n",
+    "- `-` register deleted text register\n"
    ]
   },
   {
