--- a/vim-shortcuts.ipynb
+++ b/vim-shortcuts.ipynb
@@ -26,6 +26,7 @@
     "\n",
     "- `!` invokes the terminal, anything after the ! is executed as a terminal command\n",
     "- `:` is to execute command in normal mode\n",
+    "- `:` show command history\n",
     "- `i` insert mode, inserting before the cursor\n",
     "- `I` insert at the start of the current line\n",
     "- `shift + i` enter insert mode at the begining of the line\n",
@@ -130,12 +131,17 @@
     "- `v` enter into visual mode\n",
     "- `y` is key for yanking, yanking means copy\n",
     "- `yy` yank the whole line\n",
+    "- `Y` yank entire line\n",
     "- `cc` enters insert mode but doesn't delete the full line\n",
+    "- `C` change text to the end of the line (delete to end of line and go into\n",
     "- `p` is for pasting\n",
     "- `d` is for delete\n",
     "- `dd` is for deleting line\n",
-    "- `D` deletes line after cursor\n",
-    "- `r` replace"
+    "- `D` deletes line after cursor to end of line\n",
+    "- `r` replace\n",
+    "\n",
+    "- `A` append (go to the end of the line and go into insert mode)\n",
+    "- `a` append (insert mode after the character you are on)"
    ]
   },
   {
@@ -145,7 +151,9 @@
    "source": [
     "- `%` jump to closing bracket\n",
     "\n",
+    "\n",
     "- `gg` jumps to the begining of the file\n",
+    "- `ge`takes you to end of previous word\n",
     "- `G` jumps to the end of the file\n",
     "- `<linenumber>G` jumps to the specific line number\n",
     "- `0` go the start of the line\n",
@@ -177,20 +185,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13407243-0d63-46ad-b465-9c0a99773f2f",
-   "metadata": {},
-   "source": [
-    "- `ctrl + u` scroll up\n",
-    "- `ctrl + d` scroll down\n",
-    "- `{` move to next paragraph/code block\n",
-    "- `}` move to previous paragraph/code block\n",
-    "- `H` move to the highest point in the viewport\n",
-    "- `M` move to the middle of the viewport\n",
-    "- `L` move to the lowest point  in the viewport"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "867803e3-ff9f-4db5-a364-4f90db5ca22f",
    "metadata": {},
    "source": [
@@ -203,7 +197,12 @@
     "- `?<searchterm>` start looking backwards for your search term\n",
     "- `n` jump to the next occurrence\n",
     "- `N` jump to the previous occurrence\n",
-    "- `:noh` turn off search highlighting until next search"
+    "- `:noh` turn off search highlighting until next search\n",
+    "- `*` search for the work the cursor is on\n",
+    "- `/\\c` case insensitive search\n",
+    "- `/\\<`{exact word}`/>` will search for the exact word \n",
+    "\n",
+    "- `q/` show forward search history"
    ]
   },
   {
