--- a/vim.ipynb
+++ b/vim.ipynb
@@ -221,13 +221,92 @@
     "- `.` register for the last command \n",
     "- `%` register for the document name and path that we are in \n",
     "- `/` register for path directory\n",
-    "- `-` register deleted text register\n"
+    "- `-` register deleted text register\n",
+    "- `=` expression register\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5211d086-1058-42f5-a125-574459f82645",
+   "metadata": {},
+   "source": [
+    "## Search and Replace\n",
+    "- `:<start line number>,<end line number>s/<original text>/<replace text>` this will replace the first occurence the text on the line in the text block defined by start line number and end line number\n",
+    "- `:<start line number>,<end line number>s/\\<<original text>\\>/<replace text>/g` this will replace the all occurence the text excaping space in the text block defined by start line number and end line number\n",
+    "- `:<start line number>,<end line number>s/<original text>/<replace text>/g` this will replace the all occurence the text in the text block defined by start line number and end line number\n",
+    "- `:<start line number>,<end line number>s/<original text>/<replace text>/gi` this will replace the all occurence the text in the text block defined by start line number and end line number case insensitive\n",
+    "- `:<start line number>,<end line number>s/<original text>/<replace text>/gic` this will replace the all occurence the text in the text block defined by start line number and end line number case insensitive and ask for confirmation, options y=yes, n=no, a=all, q=quit, l=last change, ^E=takes you up, ^Y=takes you up\n",
+    "- `:%s/<original text>/<replace text>` will replace the first occurence text on the line in the whole file\n",
+    "- `:%s/<original text>/<replace text>/g` will replace the all occurence text in the whole file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fdcc1a9-8e3c-4885-818b-eaed4b8b3e06",
+   "metadata": {},
+   "source": [
+    "# Page Navigation\n",
+    "- `ctrl + u` scroll up half a page or whatever you set it to be\n",
+    "- `ctrl + d` scroll down half a page or whatever you set it to be\n",
+    "- `ctrl + f` same as page down\n",
+    "- `ctrl + b` same as page up\n",
+    "- `{` move to next paragraph/code block\n",
+    "- `}` move to previous paragraph/code block\n",
+    "- `H` move to the highest point in the viewport\n",
+    "- `M` move to the middle of the viewport\n",
+    "- `L` move to the lowest point  in the viewport\n",
+    "\n",
+    "- `g;` go to last (previous) change\n",
+    "- `g'` go to next (more recent) change\n",
+    "- `:changes` to get a whole list of changes you made\n",
+    "\n",
+    "- `ctrl + o` go to previous jump\n",
+    "- `ctrl + i` go to next jump\n",
+    "- `:jumps` a record of jumps your cursor has made\n",
+    "\n",
+    "## Bookmarking\n",
+    "- `m<symbol>` will bookmark the location of the cursor with the symbol you defined\n",
+    "- `'<symbol>` will go to the line that we bookmarked with the symbol\n",
+    "- ``` `a ``` will go to the line and location that we bookmarked with the symbol\n",
+    "- `['` go to the previous bookmarked line\n",
+    "- ``` [` ``` go to the previous bookmarked location\n",
+    "- `]'`  will go to the next bookmarked line\n",
+    "- ``` ]` ``` will go to the next bookmarked location\n",
+    "- `:marks` a record of your bookmarks\n",
+    "\n",
+    "- `d'<symbol>` delect from the cursor to the line where you bookmark with the symbol\n",
+    "- `y'<symbol>` yank from cursor to line bookmarked with symbol\n",
+    "\n",
+    "- `m<uppercase symbol>` will bookmark a location that you can access from another file\n",
+    "- `'<uppercase symbol>` will open and go into the line of another file where you bookmark in\n",
+    "\n",
+    "- `:delmarks` a-zA-z,m will delete specific marks\n",
+    "- `:delmarks!` will delete all the marks"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "690261bf-12f7-4c8b-b57c-90a5d8435d99",
+   "id": "e62cbbc3-9ca0-4f8b-8cd7-18351f66e5cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68b61e89-c9b9-4f47-af3f-ca2adbb22401",
+   "metadata": {},
+   "source": [
+    "# Help\n",
+    "`:help` to get help\n",
+    "\n",
+    "`:help<command>` to inquire about a command"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e2ce128-7e8d-4b84-862a-14771aadb50e",
    "metadata": {},
    "outputs": [],
    "source": []
