--- a/vim.ipynb
+++ b/vim.ipynb
@@ -230,14 +230,21 @@
    "id": "5211d086-1058-42f5-a125-574459f82645",
    "metadata": {},
    "source": [
-    "## Search and Replace\n",
+    "# Search and Replace\n",
     "- `:<start line number>,<end line number>s/<original text>/<replace text>` this will replace the first occurence the text on the line in the text block defined by start line number and end line number\n",
     "- `:<start line number>,<end line number>s/\\<<original text>\\>/<replace text>/g` this will replace the all occurence the text excaping space in the text block defined by start line number and end line number\n",
     "- `:<start line number>,<end line number>s/<original text>/<replace text>/g` this will replace the all occurence the text in the text block defined by start line number and end line number\n",
     "- `:<start line number>,<end line number>s/<original text>/<replace text>/gi` this will replace the all occurence the text in the text block defined by start line number and end line number case insensitive\n",
     "- `:<start line number>,<end line number>s/<original text>/<replace text>/gic` this will replace the all occurence the text in the text block defined by start line number and end line number case insensitive and ask for confirmation, options y=yes, n=no, a=all, q=quit, l=last change, ^E=takes you up, ^Y=takes you up\n",
     "- `:%s/<original text>/<replace text>` will replace the first occurence text on the line in the whole file\n",
-    "- `:%s/<original text>/<replace text>/g` will replace the all occurence text in the whole file"
+    "- `:%s/<original text>/<replace text>/g` will replace the all occurence text in the whole file\n",
+    "\n",
+    "\n",
+    "## Find in Line\n",
+    "- `f<symbol>` jump to the next letter of the symbol on the line you are on\n",
+    "- `F<symbol>` jump to the previous letter of you symbol on the line you are on\n",
+    "- `t<symbol>` jump to the next letter before the symbol on the line you are on\n",
+    "- `T<symbol>` jump to the letter next to the symbol on the line you are on"
    ]
   },
   {
@@ -282,6 +289,37 @@
     "\n",
     "- `:delmarks` a-zA-z,m will delete specific marks\n",
     "- `:delmarks!` will delete all the marks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90d91d4b-7e0f-415b-a2d3-d3e644a0244a",
+   "metadata": {},
+   "source": [
+    "# Visual mode\n",
+    "`v` to enter visual mode, Visual mode will highlight a selection of text that you can take action on.\n",
+    "\n",
+    "you can use `w` for word and `e` to highlight a slection of text.\n",
+    "\n",
+    "you an yank and paste `i` in quotes.\n",
+    "\n",
+    "`V` will take you into visual line mode where you can select entire line\n",
+    "\n",
+    "`p` from visual mode is slightly different than `p` in normal mode, because it takes the line that was replced, and puts it in the Visual Mode buffer. Making it difficult to paste the same text multiple times because once the text is paste, the text it replaced is now put into the Visual Mode buffer.\n",
+    "\n",
+    "\n",
+    "## Visual Blok mode\n",
+    "`ctrl + v` to ento into visual blck mode.\n",
+    "\n",
+    "Vim Visual block mode allows you select text in columns. Allows you to update in multiple columns.\n",
+    "\n",
+    "- `I` to insert to the left of the Visual Block\n",
+    "- `A` to append to the right of the Visual Block\n",
+    "- `c` to change the Visual block\n",
+    "- `d` to delete the Visual block\n",
+    "\n",
+    "# Replace mode\n",
+    "`R` in normal mode will go to replace mode"
    ]
   },
   {
