--- a/vim.ipynb
+++ b/vim.ipynb
@@ -172,6 +172,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "93eba48f-b4a4-4c75-948f-3b2a486805fd",
+   "metadata": {},
+   "source": [
+    "# File operation\n",
+    "- `:e` will open up a file for edit\n",
+    "- `:e!` if you made changes and want to go back to the last saved document (or when you open the document you have not pressed save yet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "befe2728-3c7d-4152-a537-6bf09a3beabe",
    "metadata": {},
    "source": [
@@ -323,9 +333,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "db7abb9e-adbb-4dcc-90df-f22786d135fc",
+   "metadata": {},
+   "source": [
+    "# Buffers\n",
+    "buffers are place in memory to store your opened files.\n",
+    "\n",
+    "`:buffers` or `:ls` to see what is in the buffer\n",
+    "\n",
+    "- first column indicates the buffer number\n",
+    "- second colume indicates buffer status\n",
+    "- - %: indicates that the buffer is the curent window\n",
+    "- - #: alternate buffer edit\n",
+    "- - a: indicates the buffer which is visible and loaded\n",
+    "- - h: meand hidden buffer if you will hsow your screen\n",
+    "- - +: we have unsaved changes in the buffer\n",
+    "- third column is the path and filename of the buffer file\n",
+    "- the 4th column indicates the line number on the file the buffer points to \"cursor\"\n",
+    "\n",
+    "- `:set hidden` to move between your buffers with unsaved changes\n",
+    "- `:set nohidden` to undo hiding your buffer\n",
+    "\n",
+    "- `:bn` to go to the next buffer\n",
+    "- `:bp` to go back to previous buffer\n",
+    "- `:b<buffer number>` will take you to buffer with that number\n",
+    "- `:bd <buffer number>` to delete a buffer "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e62cbbc3-9ca0-4f8b-8cd7-18351f66e5cc",
+   "id": "00a3e7a6-298b-4cd5-be33-9b6a0b6830b3",
    "metadata": {},
    "outputs": [],
    "source": []
