--- a/vim.ipynb
+++ b/vim.ipynb
@@ -362,9 +362,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b50d116-7277-44a3-b1b0-22853ea77b98",
+   "metadata": {},
+   "source": [
+    "# Split Windows\n",
+    "- `:sp` split a window horizontally on the file you are editing\n",
+    "- `:vsp` split windo vertically\n",
+    "- `ctrl + w` keep pressing `w` will allow you to cycle through all the windows\n",
+    "- `ctrl + w + s` will split window horizontally same as `:sp`\n",
+    "- `ctrl + w + v` will split window vertically  same as `:vsp`\n",
+    "- `:q` close window you are in\n",
+    "\n",
+    "remapping of they keymaps\n",
+    "http://localhost:8888/lab/tree/ubuntu-neovim-config/nvim/lua/username/core/keymaps.lua"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00a3e7a6-298b-4cd5-be33-9b6a0b6830b3",
+   "id": "d13fb59e-2563-4eae-a3f0-e6c006d0ec89",
    "metadata": {},
    "outputs": [],
    "source": []
