--- a/vim.ipynb
+++ b/vim.ipynb
@@ -375,13 +375,37 @@
     "- `:q` close window you are in\n",
     "\n",
     "remapping of they keymaps\n",
-    "http://localhost:8888/lab/tree/ubuntu-neovim-config/nvim/lua/username/core/keymaps.lua"
+    "https://github.com/YilengYao/Neo-Vim/blob/main/ubuntu-neovim-config/nvim/lua/username/core/keymaps.lua#L19C1-L29C2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cedf50dc-fd93-4e88-838e-1ef591238fe1",
+   "metadata": {},
+   "source": [
+    "# Window tabs\n",
+    "- `:tabedit <filename>` or `:tabe <filename>` to open a file in a new window lab\n",
+    "- `:drop <filename>` will open file in current tab\n",
+    "- `tabn` or `gt` or `ctrl + pagedown` will tke you to the next tab\n",
+    "- `tabp` or `gT` or `ctrl + pageup` will take you to previous tab\n",
+    "- `:tabnew` or `space + to` will open a new empty tab\n",
+    "- `:tabm` will move the tab you are in to the far right\n",
+    "- `:tabm 0` will move the tab you are in to the far left\n",
+    "- `:tabm <position number>` will move the tab to the position number\n",
+    "keymap.set(\"n\", \"<leader>to\", \":tabnew<CR>\") -- open new tab\n",
+    "keymap.set(\"n\", \"<leader>tx\", \":tabclose<CR>\") -- close current tab\n",
+    "keymap.set(\"n\", \"<leader>tn\", \":tabn<CR>\") -- go to next tab\n",
+    "keymap.set(\"n\", \"<leader>tp\", \":tabp<CR>\") -- go toprevious tab\n",
+    "- `:q` or `:tabclose` or `space + tx` will close a single tab\n",
+    "- `:tab ball` will open all buffers each in it;s own tab\n",
+    "- `:tabonly` will close all tabs (leaving only the tab you are in open)\n",
+    "-"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d13fb59e-2563-4eae-a3f0-e6c006d0ec89",
+   "id": "db93c316-d9c4-4d4a-96eb-7c17520a1635",
    "metadata": {},
    "outputs": [],
    "source": []
