--- a/vim.ipynb
+++ b/vim.ipynb
@@ -386,26 +386,38 @@
     "# Window tabs\n",
     "- `:tabedit <filename>` or `:tabe <filename>` to open a file in a new window lab\n",
     "- `:drop <filename>` will open file in current tab\n",
-    "- `tabn` or `gt` or `ctrl + pagedown` will tke you to the next tab\n",
-    "- `tabp` or `gT` or `ctrl + pageup` will take you to previous tab\n",
+    "- `tabn` or `gt` or `ctrl + pagedown` or `space + tn` will tke you to the next tab\n",
+    "- `tabp` or `gT` or `ctrl + pageup` or `space + tp` will take you to previous tab\n",
     "- `:tabnew` or `space + to` will open a new empty tab\n",
     "- `:tabm` will move the tab you are in to the far right\n",
     "- `:tabm 0` will move the tab you are in to the far left\n",
     "- `:tabm <position number>` will move the tab to the position number\n",
-    "keymap.set(\"n\", \"<leader>to\", \":tabnew<CR>\") -- open new tab\n",
-    "keymap.set(\"n\", \"<leader>tx\", \":tabclose<CR>\") -- close current tab\n",
-    "keymap.set(\"n\", \"<leader>tn\", \":tabn<CR>\") -- go to next tab\n",
-    "keymap.set(\"n\", \"<leader>tp\", \":tabp<CR>\") -- go toprevious tab\n",
+    "\n",
     "- `:q` or `:tabclose` or `space + tx` will close a single tab\n",
     "- `:tab ball` will open all buffers each in it;s own tab\n",
-    "- `:tabonly` will close all tabs (leaving only the tab you are in open)\n",
-    "-"
+    "- `:tabonly` will close all tabs (leaving only the tab you are in open)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c022856-4ce4-4618-a8e6-3fc32384fbb9",
+   "metadata": {},
+   "source": [
+    "# VimGrep\n",
+    "- `:vimgrep /<regular expression>/g %` or `:vimg /<regular expression>/g %` run vimgreap to search for matches in regular expression in current open document\n",
+    "- `:vimgrep /<regular expression>/g */` run vimgreap to search for matches in regular expression in current working directory\n",
+    "\n",
+    "- `:cope` or `:cw` to get a list of the matches\n",
+    "- `:cnext` to jump to the next match\n",
+    "- `:cprev` to jump to previous match\n",
+    "- `:cfirst` to jump to first match\n",
+    "` "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db93c316-d9c4-4d4a-96eb-7c17520a1635",
+   "id": "c6f740ae-6f9b-4dae-9f80-374fcfcdc57a",
    "metadata": {},
    "outputs": [],
    "source": []
