--- a/vim.ipynb
+++ b/vim.ipynb
@@ -404,20 +404,35 @@
    "metadata": {},
    "source": [
     "# VimGrep\n",
-    "- `:vimgrep /<regular expression>/g %` or `:vimg /<regular expression>/g %` run vimgreap to search for matches in regular expression in current open document\n",
+    "- `:vimgrep /<regular expression>/g %` or `:vim /<regular expression>/g %` run vimgreap to search for matches in regular expression in current open document\n",
     "- `:vimgrep /<regular expression>/g */` run vimgreap to search for matches in regular expression in current working directory\n",
     "\n",
     "- `:cope` or `:cw` to get a list of the matches\n",
     "- `:cnext` to jump to the next match\n",
     "- `:cprev` to jump to previous match\n",
     "- `:cfirst` to jump to first match\n",
-    "` "
+    "- `:clast` to jump to last match"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6923f999-576f-47f1-ab3d-c9a297e75bb5",
+   "metadata": {},
+   "source": [
+    "# Macros\n",
+    "vim Macros allow you to recored and play a sequence of actions inside of the Vim editor\n",
+    "\n",
+    "Macros are stroed in the registers (a-z)- The same register that we use to yand and delete text into.\n",
+    "\n",
+    "- `q<register name>` will start recording the Macro into the register then press `q` again to stop recording the Macro.\n",
+    "\n",
+    "- `@<register name>` will play the Macro and the register where the Macro is stored."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6f740ae-6f9b-4dae-9f80-374fcfcdc57a",
+   "id": "395f0b19-6dac-4837-9b92-5e69b9819444",
    "metadata": {},
    "outputs": [],
    "source": []
