--- a/vim-shortcuts.ipynb
+++ b/vim-shortcuts.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "- `!` invokes the terminal, anything after the ! is executed as a terminal command\n",
     "- `:` is to execute command in normal mode\n",
-    "- `:` show command history\n",
+    "- `:his` or `:history` show command history\n",
     "- `i` insert mode, inserting before the cursor\n",
     "- `I` insert at the start of the current line\n",
     "- `shift + i` enter insert mode at the begining of the line\n",
@@ -64,6 +64,7 @@
     "- `e` jumps to the end of a word\n",
     "- `b` jumb backward a word\n",
     "- `0` jumps to beginning of a line\n",
+    "- `_` jumps to the first non whitespace at the begining of the line\n",
     "- `$` goes to end of a line\n",
     "- `dw` deletes a word\n",
     "- `2dw` deletes 2cwords\n",
