--- a/vim.ipynb
+++ b/vim.ipynb
@@ -2,11 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6d9961a3-1e85-4060-92b8-81db00c81f86",
+   "id": "ff4cd69b-b493-4f14-a2b2-314a2db67dc0",
    "metadata": {},
+   "source": [
+    "# Vim Modes\n",
+    "there are 4 modes\n",
+    "- normal `esc`\n",
+    "- visual `v`\n",
+    "- insert `i`\n",
+    "- command, `:`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d9961a3-1e85-4060-92b8-81db00c81f86",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Struct of Editing Commmand\n",
     "`<number><command><text object or motion>`\n",
+    "`<command><count><motion>`\n",
     "\n",
     "## Number\n",
     "number is used to perform command over multiple text objects or motions\n",
@@ -28,6 +44,10 @@
     "- `d` delete text specified by motion\n",
     "- `c` delete text specified by motion and go into insert mode\n",
     "- `y` yank(copy) text specified by motion\n",
+    "- `I` will go to beginning of the line in insert mode\n",
+    "- `A` will go to end of line in insert mode\n",
+    "- `o` will make a new line below cursor and go into insert mode\n",
+    "- `O` will make a new line above cursor and go into insert mode\n",
     "there are more \n",
     "\n",
     "### Motions\n",
@@ -427,6 +447,16 @@
     "- `q<register name>` will start recording the Macro into the register then press `q` again to stop recording the Macro.\n",
     "\n",
     "- `@<register name>` will play the Macro and the register where the Macro is stored."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b83ad861-a387-412d-bbce-4b94cbe647c2",
+   "metadata": {},
+   "source": [
+    "# Command mode\n",
+    "- `:norm <normal mode operations>` will allows you to execute normal mode operation from the command line\n",
+    "- `:! <command line>` allows you to execute command line operations in command mode "
    ]
   },
   {
